# OpenGL-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
Engine/Core/: Application.cpp
Engine/Renderer/: Window.cpp  Window.hpp
